--- a/POCMeetApp/app/src/main/AndroidManifest.xml
+++ b/POCMeetApp/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <uses-permission android:name="com.epam.pocmeetapp.permission.C2D_MESSAGE" />
 
     <application
-        android:name=".activities.POCMeetUppApplication"
+        android:name=".POCMeetUppApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
